Fixing the style alignment.

--- a/assets/css/woocommerce/woocommerce-extensions/_single-product.scss
+++ b/assets/css/woocommerce/woocommerce-extensions/_single-product.scss
@@ -6,5 +6,6 @@
 		width:100%;
 		text-align: right;
 		text-transform: uppercase;
+		padding-right: 10px;
 	}
 }
